<resources>
    <string name="app_name">App 2</string>
    <string name="header">Queen Elizabeth II</string>
    <string name="text"> Elizabeth Alexandra Mary, this is the full name of the Queen, became queen at the age of 26 when her father, King George VI, died while on an official tour of Kenia in 1952. Quite a number of Brits consider having to play the role of the queen to be a very difficult job which prevents you from having a normal lifestyle. By the way, the majority of people in Britain think the Queen is doing her job of representing Britain around the world excellently and very professionally. In her country she does charity work and participates in various events of symbolic importance.As a princess, Elizabeth II tried to lead as «normal» life as possible in her situation. She was allowed to play with other girls and she never showed she was superior to them. She even bought shoes for one of her girlfriends who was very poor. Princess Elizabeth enjoyed acting, too. With her younger sister Margaret and the children of members of the staff of the Royal Household she staged pantomime at Windsor at Christmas.During the Second World War she joined the Armed Forces, the first female monarch to do so, and helped drive and repair military trucks. Just imagine: the Queen driving or repairing a military truck!Elizabeth II was lucky to have found a man whom she truly loved and worshiped, for her he was the one. His name was Philip Mountbatten, now Prince Philip, Duke of Edinburgh. They say in his youth he was rather a reckless man – he used to drive his car too fast and Elizabeth even got in a car accident with him once. His clothes weren’t very tidy and Liz’s family complained that he didn’t have polished shoes and an elegant suit and behaved himself in an unduly familiar manner, sometimes he was just rude. But he also was a handsome young man and Elizabeth loved him anyway, she loved him as he was. Her parents were not too happy to have Philip as a son-in-law, but they didn’t want their daughter to be unhappy, so the marriage took place in 1947, when the would-be queen was twenty-one.Always keeping a brave face throughout the trials and tribulations of her reign, Elizabeth II is a role model for British public figures and commoners alike.</string>
    <string name="content_description_queen">Elizabeth II</string>

    <string name="button_green">GREEN</string>
    <string name="button_gray">GRAY</string>
    <string name="button_pink">PINK</string>
</resources>
