<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal"
    tools:context="space.thealbre.itplace2.MainActivity">

   <LinearLayout
       android:layout_width="fill_parent"
       android:layout_height="fill_parent"
       android:orientation="vertical">

      <RelativeLayout
          android:layout_width="wrap_content"
          android:layout_height="397dp"
          android:layout_weight="0.07"

          android:background="@color/background">

         <ImageView
             android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="150dp"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
             android:gravity="center_horizontal"
             app:srcCompat="@drawable/queen"
             android:contentDescription="@string/content_description_queen"/>


         <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/scroll"
         android:layout_width="fill_parent"
         android:layout_height="70dp"
             android:layout_below="@+id/textView3"
             android:layout_alignParentStart="true"
             android:layout_alignParentBottom="true"
             android:gravity="fill_horizontal">


         <TextView
             android:id="@+id/textView"
             android:layout_width="fill_parent"
             android:layout_height="70dp"
             android:gravity="fill_horizontal"
             android:isScrollContainer="true"
             android:text="@string/text"
             android:layout_marginLeft="7dp"
             android:layout_marginRight="7dp"
             tools:layout_editor_absoluteX="113dp"
             tools:layout_editor_absoluteY="177dp" />


         </ScrollView>

         <TextView
             android:id="@+id/textView3"
             android:layout_width="fill_parent"
             android:layout_height="40dp"
             android:layout_alignParentStart="true"
             android:layout_below="@+id/imageView"
             android:layout_marginTop="11dp"
             android:gravity="center_horizontal"
             android:text="@string/header"
             android:textSize="25sp"
             tools:layout_editor_absoluteX="0dp"
             tools:layout_editor_absoluteY="8dp" />

      </RelativeLayout>

      <RelativeLayout
          android:layout_width="match_parent"
          android:layout_height="20dp"
          android:layout_weight="0.02">

         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="horizontal">

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_weight="2"
                android:text="@string/button_green"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="465dp"
                android:background="#4eac01"/>

            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_weight="3"
                android:background="#c6c9ce"
                android:text="@string/button_gray"
                tools:layout_editor_absoluteX="176dp"
                tools:layout_editor_absoluteY="465dp" />

            <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_weight="4"
                android:background="#ffcbc8"
                android:text="@string/button_pink"
                tools:layout_editor_absoluteX="88dp"
                tools:layout_editor_absoluteY="465dp" />
         </LinearLayout>
      </RelativeLayout>


   </LinearLayout>
</android.support.constraint.ConstraintLayout>
